force-app/main/default/objects/copado__Feature_Toggle_Group__mdt/copado__Feature_Toggle_Group__mdt.object-meta.xml
<CustomObject>
    <label>Feature Toggle Group</label>
    <pluralLabel>Feature Toggle Groups</pluralLabel>
</CustomObject>