force-app/main/default/objects/copado__Feature_Toggle_Group__mdt/fields/copado__Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Icon_Name__c</fullName>
    <inlineHelpText>Icon Name is a SLDS Utility Icon used to represent feature toggle group. Please enter SLDS Utility Icon Name for e.g. utility:user. Read more about icons on Salesforce Lightning Design System documentation.</inlineHelpText>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>