force-app/main/default/objects/copado__Feature_Toggle_Group__mdt/fields/copado__Type__c.field-meta.xml
<CustomField>
    <fullName>copado__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier</fullName>
                <default>true</default>
                <label>Tier</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>