force-app/main/default/objects/copado__Feature_Toggle_Group__mdt/listViews/copado__All_Feature_Toggle_Groups.listView-meta.xml
<ListView>
    <fullName>copado__All_Feature_Toggle_Groups</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>copado__Order__c</columns>
    <columns>copado__Description__c</columns>
    <columns>copado__Type__c</columns>
    <columns>copado__Icon_Name__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All Feature Toggle Groups</label>
    <language>en_US</language>
</ListView>